改进链表组件，添加查找依据

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
         "esp_ble_mesh_provisioning_api.h": "c",
         "ble_mesh_utils.h": "c",
         "esp_ble_mesh_defs.h": "c",
-        "mesh_config.h": "c"
+        "mesh_config.h": "c",
+        "esp_ble_mesh_config_model_api.h": "c"
     }
 }
