修正目录结构，修改cmakelist文件

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
         "ble_mesh_utils.h": "c",
         "esp_ble_mesh_defs.h": "c",
         "mesh_config.h": "c",
-        "esp_ble_mesh_config_model_api.h": "c"
+        "esp_ble_mesh_config_model_api.h": "c",
+        "link_list.h": "c"
     }
 }
