--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(srcs "main.c")
 
 idf_component_register(SRCS "${srcs}"
-                    INCLUDE_DIRS  ".")
+                    INCLUDE_DIRS  "."
+                    REQUIRES ble_mesh nvs_flash)
