--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,9 @@
         "esp_ble_mesh_defs.h": "c",
         "mesh_config.h": "c",
         "esp_ble_mesh_config_model_api.h": "c",
-        "link_list.h": "c"
+        "link_list.h": "c",
+        "esp_ble_mesh_common_api.h": "c",
+        "array": "c",
+        "regex": "c"
     }
 }
