按键以及led功能规划

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(srcs "main.c")
 
-idf_component_register(SRCS "${srcs}"
+idf_component_register(SRCS "board.c" "${srcs}"
                     INCLUDE_DIRS  "."
-                    REQUIRES ble_mesh nvs_flash)
+                    REQUIRES ble_mesh nvs_flash driver)
