--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -2,4 +2,4 @@ set(srcs "main.c")
 
 idf_component_register(SRCS "board.c" "${srcs}"
                     INCLUDE_DIRS  "."
-                    REQUIRES ble_mesh nvs_flash driver)
+                    REQUIRES ble_mesh nvs_flash driver freertos)
