--- a/components/wifi/CMakeLists.txt
+++ b/components/wifi/CMakeLists.txt
@@ -1,3 +1,3 @@
-idf_component_register(SRCS "wifi.c" 
+idf_component_register(SRCS "wifi.c" "tcp_server.c" 
                     INCLUDE_DIRS "."
-                    REQUIRES esp_wifi )  
+                    REQUIRES esp_wifi lwip)  
