初步完成tcp server功能的添加

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,6 +38,7 @@
         "board.h": "c",
         "esp_log.h": "c",
         "nvs_flash.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "esp_bt_device.h": "c"
     }
 }
