--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,6 +39,8 @@
         "esp_log.h": "c",
         "nvs_flash.h": "c",
         "string.h": "c",
-        "esp_bt_device.h": "c"
+        "esp_bt_device.h": "c",
+        "esp_netif.h": "c",
+        "wifi.h": "c"
     }
 }
