删除上一套两个sta的模式，转为ap+sta

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,7 @@
         "wifi.h": "c",
         "esp_wifi.h": "c",
         "tcp_server.h": "c",
-        "esp_bit_defs.h": "c"
+        "esp_bit_defs.h": "c",
+        "command_tools.h": "c"
     }
 }
